# Aideo-Music-Player

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  patch_player.ps1  patch_player.py  updater.json  vitest.config.ts
.github/workflows/: check.yml  publish.yml
docs/: CNAME  index.html  prd.md  robots.txt  sitemap.xml  srs.md  style.css
src/: App.css  App.tsx  store.ts  utils.ts
src-tauri/: .gitignore  Cargo.toml  Untitled-1.txt  build.rs  build_errors.txt  tauri.conf.json  tauri.key  tauri.key.pub
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: artwork.rs  chromecast.rs  cloud.rs  db.rs  db_tests.rs  dependencies.rs  discord.rs  downloader.rs  lastfm.rs  lastfm_api.rs  lib.rs  lib.rs.new  lyrics.rs  musicbrainz.rs  player.rs  remote_server.rs  scanner.rs  scratch.rs  scratch_compile.rs  slider.rs  sonic_analyzer.rs  taskbar.rs  tidal.rs  updater.rs  wasapi_engine.rs  youtube.rs
src-tauri/src/player/: dsp.rs  dsp_tests.rs  mod.rs
src-tauri/src/youtube/: client.rs  mod.rs  parser.rs  ytdlp.rs
src/components/: AideoLabView.tsx  AideoPrompt.tsx  AideoSearchView.tsx  AideoView.tsx  AlbumsView.tsx  ArtistDiscographyDrawer.tsx  AudioControlCenter.tsx  BrowserCallbackLanding.tsx  CastSelector.tsx  ChartsView.tsx  CoverArtModal.tsx  FullscreenView.tsx  LastfmView.tsx  LibraryView.tsx  LiquidBackground.tsx  ListenbrainzView.tsx  ListeningInsightsView.tsx  LocalQRCode.tsx  LyricsPanel.tsx  MiniPlayer.tsx  NowPlayingView.tsx  OauthChildCallback.tsx  OnboardingWizard.tsx  PlayerBar.tsx  ProAudioPanel.tsx  QueueView.tsx  SettingsModal.tsx  SettingsView.tsx  Sidebar.tsx  SoulseekView.tsx  TidalView.tsx  Toast.tsx  TorrentView.tsx  Visualizer.tsx  YoutubeSearchView.tsx
src/components/Settings/: AccountsTab.tsx  AudioSettingsTab.tsx  PluginsTab.tsx
src/store/: authSlice.ts  cloudSlice.ts  lastfmSlice.ts  librarySlice.ts  listenbrainzSlice.ts  metadataSlice.ts  playbackSlice.ts  types.ts  uiSlice.ts
src/test/: advanced_albums.test.ts  albums.test.ts  setup.ts  store.test.ts  utils.test.ts
src/utils/: colorExtractor.ts  storage.ts  supabaseClient.ts  syncEngine.ts  useVirtualList.ts
