[package]
name = "tauri-app"
version = "0.2.2"
description = "A high-performance, audiophile-grade music player with dynamic theming and smart lyric search."
authors = ["Alirul"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5.5", features = ["all"] }
cpal = { version = "0.17.3" }
rusqlite = { version = "0.39.0", features = ["bundled"] }
walkdir = "2.5.0"
base64 = "0.22"
rubato = "0.16"
reqwest = { version = "0.13.3", features = ["json", "blocking", "stream", "native-tls"] }
tokio = { version = "1.52.3", features = ["full"] }
urlencoding = "2.1.3"
tauri-plugin-dialog = "2.7.1"
biquad = "0.6.0"
ringbuf = "0.2.8"
tauri-plugin-updater = "2.10.1"
souvlaki = "0.8.3"
md5 = "0.8.0"
rustfft = "6.4.1"
crossbeam-channel = "0.5.15"

