[package]
name = "aideo"
version = "0.9.1"
description = "A high-performance, audiophile-grade music player with dynamic theming and smart lyric search."
authors = ["Alirul"]
edition = "2021"
default-run = "aideo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5.5", features = ["all"] }
cpal = { version = "0.17.3", features = ["asio"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
walkdir = "2.5.0"
libloading = "0.8.0"
base64 = "0.22"
rubato = "0.16"
reqwest = { version = "0.12", features = ["json", "blocking", "stream", "native-tls"] }
tokio = { version = "1.52.3", features = ["full"] }
url = "2.5"
urlencoding = "2.1.3"
tauri-plugin-dialog = "2.7.1"
biquad = "0.6.0"
ringbuf = "0.2.8"
discord-rich-presence = "0.2.4"
lazy_static = "1.4"
souvlaki = "0.8.3"
md5 = "0.8.0"
rustfft = "6.4.1"
crossbeam-channel = "0.5.15"
rand = "0.9.0"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
dirs = "6.0.0"
futures = "0.3"
windows = { version = "0.52.0", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Power",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Registry",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Multimedia"
] }
wasapi = "0.23.0"
regex = "1.10.3"
oxicast = "0.0.1"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
keyring = "3.0.0"
chromaprint-next = "0.1.0"
tokio-tungstenite = "0.29.0"
